# stdgo

./: .clang-format  .gitignore  .ycm_extra_conf.py  CHANGELOG.md  LICENSE  README.md  stdgo.cmake
include/: config_template.hpp
include/go/: chart.hpp  slice.hpp
include/go/chart/: chart_2d.hpp  common.hpp
include/stdgo/: chart.hpp  fmt.hpp  plot.hpp
include/stdgo/chart/: chart_2d.hpp  common.hpp  line.hpp
include/stdgo/fmt/: sprintf.hpp
include/stdgo/image/: common.hpp  png.hpp
include/stdgo/plot/: iplot.hpp  line.hpp  plot.hpp  qt.hpp
src/chart/: chart_2d_qt.cpp  common.cpp  line_qt.cpp
src/image/: png.cpp
src/plot/: line_qt.cpp  qt.cpp
test/: run.sh
test/benchmark/: CMakeLists.txt  main_benchmark.cpp  memcpy_benchmark.cpp  plot.py  run.sh  slice_benchmark.cpp
test/clang_tidy/: clang-tidy.py  clang_tidy_parser.go  run.sh
test/unittest/: CMakeLists.txt  main_test.cpp  run.sh  slice_test.cpp
test/unittest/chart/: chart_2d_line_test.cpp  chart_2d_polar_test.cpp  line_test.cpp
test/unittest/image/: png_test.cpp
test/unittest/plot/: line_test.cpp
